# macbridge2

./: .gitignore  IMPROVEMENTS.md  README.md  STATUS.md  SYSTEM_CALLS.md  USAGE.md  build.bat  build.sh  create_files.py  create_installer.py  create_test_executable.py  decompress_dmg.py  demo.sh  enhance_syscall.py  fix_memory.py  fix_syscall_types.py  macho_pe_analysis.md  test_program.c  update_app_bundle.py
.github/workflows/: build-release.yml
.trae/documents/: windarling_plan.md
Applications/: .app_db
Applications/TestApp.app/Contents/MacOS/: TestApp
TestApp.app/Contents/: Info.plist
WinDarling/: CMakeLists.txt  README.md
WinDarling/examples/: advanced_demo.cpp  diagnostics_demo.cpp
WinDarling/include/appkit/: AppKitCpp.h
WinDarling/include/foundation/: FoundationCpp.h
WinDarling/include/utils/: diagnostics.h
WinDarling/src/appkit/: AppKitCpp.cpp
WinDarling/src/foundation/: FoundationCpp.cpp
WinDarling/src/utils/: diagnostics.cpp
WinDarling/tests/: test_foundation.cpp
examples/: create_test_macho.py
src/: app_bundle.c  app_bundle.h  app_loader.c  dmg.c  dmg.h  dyld.c  dyld.h  gui.cpp  gui.h  gui_main.cpp  hfs.c  hfs.h  macho.c  macho.h  platform.c  platform.h  syscall.c  syscall.h  test_loader.c  ui.c  ui.h  util.c  util.h  vfs.c  vfs.h  win32_gui.c  win32_gui.h  win32_gui.rc
